updated Message component

--- a/src/app/Components/info-message/info-message.component.html
+++ b/src/app/Components/info-message/info-message.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="errorInfo">
+<!-- <div *ngIf="errorInfo">
   <h2>Info Messages</h2>
   <p id="errorInfo"> Form not valid</p>
 </div>
@@ -11,6 +11,9 @@
   <p id="resetInfo"> Form cleared</p>
 </div>
 
+ -->
 
-
-
+<div>
+  <h3>Info Message</h3>
+  <p style="background-color: {{type}}; color: white;">{{text}}</p>
+</div>
