minor text fixes

--- a/src/app/Components/test-form/test-form.component.html
+++ b/src/app/Components/test-form/test-form.component.html
@@ -1,6 +1,6 @@
-<info-message *ngIf="successInfo" [text]="'Form Successful'" [type]="success"></info-message>
-<info-message *ngIf="errorInfo" [text]="'Form not valid'" [type]="error"></info-message>
-<info-message *ngIf="resetInfo" [text]="'Form cleared'" [type]="info"></info-message>
+<info-message *ngIf="successInfo" [text]="'Form submitted Successfully'" [type]="success"></info-message>
+<info-message *ngIf="errorInfo" [text]="'Form is not valid'" [type]="error"></info-message>
+<info-message *ngIf="resetInfo" [text]="'Form was cleared'" [type]="info"></info-message>
 
 
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
