info-message.component style binding fix

--- a/src/app/Components/info-message/info-message.component.html
+++ b/src/app/Components/info-message/info-message.component.html
@@ -1,4 +1,4 @@
 <div>
   <h3>Info Message</h3>
-  <p style="background-color: {{type}}; color: white;">{{text}}</p>
+  <p [style.background-color]="type">{{text}}</p>
 </div>
